Bug 423007 - When file is opened via Dolphin, it is appended to the end of the playlist, not played immediately
Summary: When file is opened via Dolphin, it is appended to the end of the playlist, n...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: usability
: 452664 457182 485483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-15 12:12 UTC by Patrick Silva
Modified: 2025-01-21 21:30 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments
screenshot (38.79 KB, image/png)
2020-06-15 12:12 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-15 12:12:52 UTC
Created attachment 129382 [details]
screenshot

SUMMARY
related to bug 420752

STEPS TO REPRODUCE
1. make sure Elisa is your default player
2. open any audio with Elisa via Dolphin
3. 

OBSERVED RESULT
playlist shows an circular icon with a diagonal line (see the attached screenshot) and playback is not started

EXPECTED RESULT
Elisa should play audio file opened via Dolphin

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-06-19 00:47:02 UTC
Confirmed. This used to work, so it must be a recent regression.
Comment 2 Matthieu Gallien 2020-07-27 21:55:04 UTC
I will work on this one.
Comment 3 Bug Janitor Service 2020-07-29 14:34:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/140
Comment 4 Matthieu Gallien 2020-07-29 14:39:57 UTC
(In reply to Bug Janitor Service from comment #3)
> A possibly relevant merge request was started @
> https://invent.kde.org/multimedia/elisa/-/merge_requests/140

It would be nice if you can confirm that this MR fixes your bug.
Comment 5 Patrick Silva 2020-07-29 18:02:05 UTC
I have applied your patch to 20.08 branch.
The bug persists.
Comment 6 Matthieu Gallien 2020-07-31 07:31:07 UTC
(In reply to Patrick Silva from comment #5)
> I have applied your patch to 20.08 branch.
> The bug persists.

Thanks for the test.
Sorry for the breakage.

I will fix that MR.
Comment 7 Matthieu Gallien 2020-08-03 07:18:47 UTC
Git commit fd8e11b93f5ab047f05c3f56ade632a099589b91 by Matthieu Gallien.
Committed on 02/08/2020 at 21:56.
Pushed by mgallien into branch 'release/20.08'.

fix enqueue from program arguments (for example from Doplhin)

M  +3    -3    src/elisaapplication.cpp

https://invent.kde.org/multimedia/elisa/commit/fd8e11b93f5ab047f05c3f56ade632a099589b91
Comment 8 Patrick Silva 2020-10-10 10:27:48 UTC
This issue is still reproducible.

1. add some track(s) to playlist
2. close Elisa
3. open an audio file with Elisa via Dolphin

Elisa opens, the file used in the last step is present in the playlist but Elisa does not play it on opening.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 9 KaruppuSwamy 2020-10-10 17:23:01 UTC
Debugging this on master. I found that Elisa plays the song passed by Dolphin when the playlist is already empty. Where as if the elisa has a non-empty play list already, the new file is appended but does not start play.
Comment 10 Nate Graham 2020-11-11 05:06:21 UTC
Confirmed. The song is appended to the end of the playlist and playback respects the setting for whether or not to start playing immediately, starting with the last-played song in the playlist rather than the opened song.

In this case, it should probably start playing immediately, and possibly replace the existing playlist with the specified song. If that's too destructive, then it should append to the playlist but then begin playback at that song.
Comment 11 Patrick Silva 2022-04-16 18:37:16 UTC
*** Bug 452664 has been marked as a duplicate of this bug. ***
Comment 12 Patrick Silva 2022-07-27 15:43:12 UTC
*** Bug 457182 has been marked as a duplicate of this bug. ***
Comment 13 Thomas Bertels 2024-02-16 17:40:32 UTC
One way to fix this would be to add an argument like -queue which would add the file to the queue instead of playing it.
A "Dolphin Service Menu" script could then be created to queue the selected file.
Then the default behavior could be set to empty the queue and play the opened file.

Note that an option to keep the queue but still play the opened file (like Audacious has) could be added too.
Comment 14 Patrick Silva 2024-04-13 21:53:59 UTC
*** Bug 485483 has been marked as a duplicate of this bug. ***
Comment 15 Bug Janitor Service 2024-08-03 19:36:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/601
Comment 16 Bug Janitor Service 2024-08-07 22:46:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/602
Comment 17 Bug Janitor Service 2024-08-07 22:46:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/602
Comment 18 Bug Janitor Service 2025-01-20 19:11:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/658
Comment 19 Jack Hill 2025-01-21 21:30:16 UTC
Git commit 542524345878cc7cd6e30a5e38a0a4e56f8d8b80 by Jack Hill, on behalf of Pedro Nishiyama.
Committed on 21/01/2025 at 21:18.
Pushed by jackh into branch 'master'.

Start playing track when opened externally

M  +7    -0    src/mediaplaylistproxymodel.cpp
M  +1    -1    src/qml/DataGridView.qml

https://invent.kde.org/multimedia/elisa/-/commit/542524345878cc7cd6e30a5e38a0a4e56f8d8b80