fix enqueue from program arguments (for example from Doplhin)

BUG: 423007